Switched to the 'Flying' project, libovdb now links into OpenVDBModule, and can run the editor with OpenVDBModule

--- a/.gitignore
+++ b/.gitignore
@@ -44,6 +44,8 @@ CosmicSafari/Intermediate/ProjectFiles/obj/*
 CosmicSafari/Content/FirstPerson/*
 CosmicSafari/Content/FirstPersonCPP/*
 CosmicSafari/Content/Geometry/*
+CosmicSafari/Content/Flying/*
+CosmicSafari/Content/FlyingCPP/*
 CosmicSafari/ThirdParty/Build/*
 CosmicSafari/DerivedDataCache
 CosmicSafari/Intermediate/ReimportCache
