--- a/CosmicSafari/Config/DefaultGame.ini
+++ b/CosmicSafari/Config/DefaultGame.ini
@@ -1,7 +1,3 @@
-[ProjectSettings]
-ProjectID=(A=1823396784,B=1298598689,C=1743498150,D=-2048051708)
-ProjectName=First Person Template
-
-
 [/Script/EngineSettings.GeneralProjectSettings]
-ProjectID=054655914BC1E8ACCDEC8081F4226CF9
+ProjectID=6A4BA0D64B0CB29DCFCBF0AF4313C64B
+ProjectName=Flying Game Template
