--- a/CosmicSafari/Config/DefaultEngine.ini
+++ b/CosmicSafari/Config/DefaultEngine.ini
@@ -1,17 +1,12 @@
-[/Script/Engine.CollisionProfile]
-+Profiles=(Name="Projectile",CollisionEnabled=QueryOnly,ObjectTypeName="Projectile",CustomResponses=,HelpMessage="Preset for projectiles",bCanModify=True)
-+DefaultChannelResponses=(Channel=ECC_GameTraceChannel1,Name="Projectile",DefaultResponse=ECR_Block,bTraceType=False,bStaticObject=False)
-+EditProfiles=(Name="Trigger",CustomResponses=((Channel=Projectile, Response=ECR_Ignore)))
-
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/FirstPersonCPP/Maps/FirstPersonExampleMap
+EditorStartupMap=/Game/FlyingCPP/Maps/FlyingExampleMap
 LocalMapOptions=
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/FirstPersonCPP/Maps/FirstPersonExampleMap
+GameDefaultMap=/Game/FlyingCPP/Maps/FlyingExampleMap
 ServerDefaultMap=/Engine/Maps/Entry
 GlobalDefaultGameMode=/Script/CosmicSafari.CosmicSafariGameMode
 GlobalDefaultServerGameMode=None
@@ -19,12 +14,10 @@ GlobalDefaultServerGameMode=None
 
 
 [/Script/Engine.Engine]
-+ActiveGameNameRedirects=(OldGameName="TP_FirstPerson",NewGameName="/Script/CosmicSafari")
-+ActiveGameNameRedirects=(OldGameName="/Script/TP_FirstPerson",NewGameName="/Script/CosmicSafari")
-+ActiveClassRedirects=(OldClassName="TP_FirstPersonProjectile",NewClassName="CosmicSafariProjectile")
-+ActiveClassRedirects=(OldClassName="TP_FirstPersonHUD",NewClassName="CosmicSafariHUD")
-+ActiveClassRedirects=(OldClassName="TP_FirstPersonGameMode",NewClassName="CosmicSafariGameMode")
-+ActiveClassRedirects=(OldClassName="TP_FirstPersonCharacter",NewClassName="CosmicSafariCharacter")
++ActiveGameNameRedirects=(OldGameName="TP_Flying",NewGameName="/Script/CosmicSafari")
++ActiveGameNameRedirects=(OldGameName="/Script/TP_Flying",NewGameName="/Script/CosmicSafari")
++ActiveClassRedirects=(OldClassName="TP_FlyingPawn",NewClassName="CosmicSafariPawn")
++ActiveClassRedirects=(OldClassName="TP_FlyingGameMode",NewClassName="CosmicSafariGameMode")
 
 [/Script/Engine.UserInterfaceSettings]
 RenderFocusRule=NavigationOnly
