Progress towards loading vdb geometry into a UProceduralMeshComponent (using blueprints to build the UProceduralMeshComponent)

--- a/CosmicSafari/Config/DefaultEngine.ini
+++ b/CosmicSafari/Config/DefaultEngine.ini
@@ -73,4 +73,11 @@ AppliedTargetedHardwareClass=Desktop
 DefaultGraphicsPerformance=Scalable
 AppliedDefaultGraphicsPerformance=Scalable
 
+[UnrealEd.EditorEngine]
++EditPackages=OpenVDBModule
 
+[Launch]
+Module=OpenVDBModule
+
+[/Script/Engine.UObjectPackages]
++NativePackages=OpenVDBModule
