--- a/CosmicSafari/CosmicSafari.uproject
+++ b/CosmicSafari/CosmicSafari.uproject
@@ -7,12 +7,18 @@
 		{
 			"Name": "CosmicSafari",
 			"Type": "Runtime",
-			"LoadingPhase": "Default"
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"Engine"
+			]
 		},
-    {
-      "Name": "OpenVDBModule",
-      "Type": "Runtime",
-      "LoadingPhase": "Default"
-    }
+		{
+			"Name": "OpenVDBModule",
+			"Type": "Runtime",
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"Engine"
+			]
+		}
 	]
 }
