--- a/CosmicSafari/Config/DefaultEngine.ini
+++ b/CosmicSafari/Config/DefaultEngine.ini
@@ -16,8 +16,14 @@ GlobalDefaultServerGameMode=None
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_Flying",NewGameName="/Script/CosmicSafari")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_Flying",NewGameName="/Script/CosmicSafari")
++ActiveGameNameRedirects=(OldGameName="TP_FirstPerson",NewGameName="/Script/CosmicSafari")
++ActiveGameNameRedirects=(OldGameName="/Script/TP_FirstPerson",NewGameName="/Script/CosmicSafari")
 +ActiveClassRedirects=(OldClassName="TP_FlyingPawn",NewClassName="CosmicSafariPawn")
 +ActiveClassRedirects=(OldClassName="TP_FlyingGameMode",NewClassName="CosmicSafariGameMode")
++ActiveClassRedirects=(OldClassName="TP_FirstPersonProjectile",NewClassName="/Script/CosmicSafari.FirstPersonCPPProjectile")
++ActiveClassRedirects=(OldClassName="TP_FirstPersonHUD",NewClassName="/Script/CosmicSafari.FirstPersonCPPHUD")
++ActiveClassRedirects=(OldClassName="TP_FirstPersonGameMode",NewClassName="/Script/CosmicSafari.FirstPersonCPPHUD")
++ActiveClassRedirects=(OldClassName="TP_FirstPersonCharacter",NewClassName="/Script/CosmicSafari.FirstPersonCPPCharacter")
 
 [/Script/Engine.UserInterfaceSettings]
 RenderFocusRule=NavigationOnly
