--- a/CosmicSafari/Config/DefaultInput.ini
+++ b/CosmicSafari/Config/DefaultInput.ini
@@ -1,11 +1,5 @@
 
 [/Script/Engine.InputSettings]
--AxisConfig=(AxisKeyName="Gamepad_LeftX",AxisProperties=(DeadZone=0.25,Exponent=1.f,Sensitivity=1.f))
--AxisConfig=(AxisKeyName="Gamepad_LeftY",AxisProperties=(DeadZone=0.25,Exponent=1.f,Sensitivity=1.f))
--AxisConfig=(AxisKeyName="Gamepad_RightX",AxisProperties=(DeadZone=0.25,Exponent=1.f,Sensitivity=1.f))
--AxisConfig=(AxisKeyName="Gamepad_RightY",AxisProperties=(DeadZone=0.25,Exponent=1.f,Sensitivity=1.f))
--AxisConfig=(AxisKeyName="MouseX",AxisProperties=(DeadZone=0.f,Exponent=1.f,Sensitivity=0.07f))
--AxisConfig=(AxisKeyName="MouseY",AxisProperties=(DeadZone=0.f,Exponent=1.f,Sensitivity=0.07f))
 -AxisConfig=(AxisKeyName="Gamepad_LeftX",AxisProperties=(DeadZone=0.250000,Sensitivity=1.000000,Exponent=1.000000,bInvert=False))
 -AxisConfig=(AxisKeyName="Gamepad_LeftY",AxisProperties=(DeadZone=0.250000,Sensitivity=1.000000,Exponent=1.000000,bInvert=False))
 -AxisConfig=(AxisKeyName="Gamepad_RightX",AxisProperties=(DeadZone=0.250000,Sensitivity=1.000000,Exponent=1.000000,bInvert=False))
@@ -24,6 +18,10 @@ bEnableMouseSmoothing=True
 bEnableFOVScaling=True
 FOVScale=0.011110
 DoubleClickTime=0.200000
+-ActionMappings=(ActionName="Jump",Key=SpaceBar,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
+-ActionMappings=(ActionName="Fire",Key=LeftMouseButton,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="Jump",Key=SpaceBar,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="Fire",Key=LeftMouseButton,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 -AxisMappings=(AxisName="MouseX",Key=MouseX,Scale=1.000000)
 -AxisMappings=(AxisName="MouseY",Key=MouseY,Scale=1.000000)
 -AxisMappings=(AxisName="Forward",Key=W,Scale=1.000000)
@@ -31,7 +29,15 @@ DoubleClickTime=0.200000
 -AxisMappings=(AxisName="Left",Key=A,Scale=1.000000)
 -AxisMappings=(AxisName="Right",Key=D,Scale=1.000000)
 -AxisMappings=(AxisName="Up",Key=Z,Scale=1.000000)
--AxisMappings=(AxisName="Down",Key=MouseScrollDown,Scale=1.000000)
+-AxisMappings=(AxisName="Down",Key=X,Scale=1.000000)
+-AxisMappings=(AxisName="MoveForward",Key=W,Scale=1.000000)
+-AxisMappings=(AxisName="MoveRight",Key=D,Scale=1.000000)
+-AxisMappings=(AxisName="Turn",Key=MouseX,Scale=1.000000)
+-AxisMappings=(AxisName="LookUp",Key=MouseY,Scale=1.000000)
+-AxisMappings=(AxisName="TurnRate",Key=None,Scale=1.000000)
+-AxisMappings=(AxisName="LookUpRate",Key=None,Scale=1.000000)
+-AxisMappings=(AxisName="MoveRight",Key=A,Scale=-1.000000)
+-AxisMappings=(AxisName="MoveForward",Key=S,Scale=1.000000)
 +AxisMappings=(AxisName="MouseX",Key=MouseX,Scale=1.000000)
 +AxisMappings=(AxisName="MouseY",Key=MouseY,Scale=1.000000)
 +AxisMappings=(AxisName="Forward",Key=W,Scale=1.000000)
@@ -40,6 +46,14 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="Right",Key=D,Scale=1.000000)
 +AxisMappings=(AxisName="Up",Key=Z,Scale=1.000000)
 +AxisMappings=(AxisName="Down",Key=X,Scale=1.000000)
++AxisMappings=(AxisName="MoveForward",Key=W,Scale=1.000000)
++AxisMappings=(AxisName="MoveRight",Key=D,Scale=1.000000)
++AxisMappings=(AxisName="Turn",Key=MouseX,Scale=1.000000)
++AxisMappings=(AxisName="LookUp",Key=MouseY,Scale=1.000000)
++AxisMappings=(AxisName="TurnRate",Key=None,Scale=1.000000)
++AxisMappings=(AxisName="LookUpRate",Key=None,Scale=1.000000)
++AxisMappings=(AxisName="MoveRight",Key=A,Scale=-1.000000)
++AxisMappings=(AxisName="MoveForward",Key=S,Scale=-1.000000)
 bAlwaysShowTouchInterface=False
 bShowConsoleOnFourFingerTap=True
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
