Woot! Milestone in running openvdb directly in the engine - fixed some logic errors and switched back to linking to openvdb statically because OpenVDB.dll would need access to memory in OpenVDBModule.dll

--- a/CosmicSafari/Config/DefaultEngine.ini
+++ b/CosmicSafari/Config/DefaultEngine.ini
@@ -8,7 +8,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 GameInstanceClass=/Script/Engine.GameInstance
 GameDefaultMap=/Game/FlyingCPP/Maps/FlyingExampleMap
 ServerDefaultMap=/Engine/Maps/Entry
-GlobalDefaultGameMode=/Script/CosmicSafari.CosmicSafariGameMode
+GlobalDefaultGameMode=/Script/CosmicSafari.FirstPersonCPPGameMode
 GlobalDefaultServerGameMode=None
 
 
