--- a/CosmicSafari/Config/DefaultEngine.ini
+++ b/CosmicSafari/Config/DefaultEngine.ini
@@ -8,7 +8,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 GameInstanceClass=/Script/Engine.GameInstance
 GameDefaultMap=/Game/FlyingCPP/Maps/FlyingExampleMap
 ServerDefaultMap=/Engine/Maps/Entry
-GlobalDefaultGameMode=/Script/CosmicSafari.FirstPersonCPPGameMode
+GlobalDefaultGameMode=/Script/CosmicSafari.CosmicSafariGameMode
 GlobalDefaultServerGameMode=None
 
 
