Better logic for async meshing, and experimenting with async scene

--- a/CosmicSafari/Config/DefaultEngine.ini
+++ b/CosmicSafari/Config/DefaultEngine.ini
@@ -87,3 +87,8 @@ Module=OpenVDBModule
 
 [/Script/Engine.UObjectPackages]
 +NativePackages=OpenVDBModule
+
+[/Script/Engine.PhysicsSettings]
+bSubsteppingAsync=False
+bEnableAsyncScene=True
+
